Move math and crpto files into math/

--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -73,6 +73,18 @@
     <ClCompile Include="..\..\..\..\src\constants.cpp" />
     <ClCompile Include="..\..\..\..\src\error.cpp" />
     <ClCompile Include="..\..\..\..\src\format.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\ec_keys.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\external\hmac_sha256.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\hmac_sha512.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\ripemd160.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\sha1.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\sha256.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\sha512.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\zeroize.c" />
+    <ClCompile Include="..\..\..\..\src\math\hash.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\hash_number.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\script_number.cpp" />
     <ClCompile Include="..\..\..\..\src\network\channel.cpp" />
     <ClCompile Include="..\..\..\..\src\network\handshake.cpp" />
     <ClCompile Include="..\..\..\..\src\network\hosts.cpp" />
@@ -83,19 +95,7 @@
     <ClCompile Include="..\..\..\..\src\stealth.cpp" />
     <ClCompile Include="..\..\..\..\src\transaction.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\binary.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\checksum.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\ec_keys.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\external\hmac_sha256.c" />
-    <ClCompile Include="..\..\..\..\src\utility\external\sha512.c" />
-    <ClCompile Include="..\..\..\..\src\utility\external\hmac_sha512.c" />
-    <ClCompile Include="..\..\..\..\src\utility\external\ripemd160.c" />
-    <ClCompile Include="..\..\..\..\src\utility\external\sha1.c" />
-    <ClCompile Include="..\..\..\..\src\utility\external\sha256.c" />
-    <ClCompile Include="..\..\..\..\src\utility\external\zeroize.c" />
-    <ClCompile Include="..\..\..\..\src\utility\hash_number.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\logger.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\hash.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\script_number.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\threadpool.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\timed_section.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\address.cpp" />
@@ -117,6 +117,19 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\define.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\error.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\format.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\checksum.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\ec_keys.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\hmac_sha256.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\hmac_sha512.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\ripemd160.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\sha1.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\sha256.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\sha512.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\uint256.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\zeroize.h" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\hash.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\hash_number.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\script_number.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\handshake.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\hosts.hpp" />
@@ -133,23 +146,10 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\assert.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\async_parallel.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\binary.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\checksum.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\data.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\decorator.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\ec_keys.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\hmac_sha256.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\hmac_sha512.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\ripemd160.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\sha1.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\sha256.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\sha512.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\uint256.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\external\zeroize.h" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\hash_number.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\logger.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\script_number.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\serializer.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\hash.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\subscriber.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\threadpool.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\timed_section.hpp" />
