--- a/Makefile.am
+++ b/Makefile.am
@@ -76,6 +76,25 @@ bitcoin_bitcoin_impl_serialize_include_HEADERS = \
     include/bitcoin/bitcoin/impl/serialize/block.ipp \
     include/bitcoin/bitcoin/impl/serialize/misc.ipp
 
+bitcoin_bitcoin_math_includedir = ${includedir}/bitcoin/bitcoin/math
+bitcoin_bitcoin_math_include_HEADERS = \
+    include/bitcoin/bitcoin/math/checksum.hpp \
+    include/bitcoin/bitcoin/math/ec_keys.hpp \
+    include/bitcoin/bitcoin/math/hash.hpp \
+    include/bitcoin/bitcoin/math/hash_number.hpp \
+    include/bitcoin/bitcoin/math/script_number.hpp
+
+bitcoin_bitcoin_math_external_includedir = ${includedir}/bitcoin/bitcoin/math/external
+bitcoin_bitcoin_math_external_include_HEADERS = \
+    include/bitcoin/bitcoin/math/external/hmac_sha256.h \
+    include/bitcoin/bitcoin/math/external/hmac_sha512.h \
+    include/bitcoin/bitcoin/math/external/ripemd160.h \
+    include/bitcoin/bitcoin/math/external/sha1.h \
+    include/bitcoin/bitcoin/math/external/sha256.h \
+    include/bitcoin/bitcoin/math/external/sha512.h \
+    include/bitcoin/bitcoin/math/external/uint256.h \
+    include/bitcoin/bitcoin/math/external/zeroize.h
+
 bitcoin_bitcoin_network_includedir = ${includedir}/bitcoin/bitcoin/network
 bitcoin_bitcoin_network_include_HEADERS = \
     include/bitcoin/bitcoin/network/channel.hpp \
@@ -91,30 +110,14 @@ bitcoin_bitcoin_util_include_HEADERS = \
     include/bitcoin/bitcoin/utility/assert.hpp \
     include/bitcoin/bitcoin/utility/async_parallel.hpp \
     include/bitcoin/bitcoin/utility/binary.hpp \
-    include/bitcoin/bitcoin/utility/checksum.hpp \
     include/bitcoin/bitcoin/utility/data.hpp \
     include/bitcoin/bitcoin/utility/decorator.hpp \
-    include/bitcoin/bitcoin/utility/ec_keys.hpp \
-    include/bitcoin/bitcoin/utility/hash.hpp \
-    include/bitcoin/bitcoin/utility/hash_number.hpp \
     include/bitcoin/bitcoin/utility/logger.hpp \
-    include/bitcoin/bitcoin/utility/script_number.hpp \
     include/bitcoin/bitcoin/utility/serializer.hpp \
     include/bitcoin/bitcoin/utility/subscriber.hpp \
     include/bitcoin/bitcoin/utility/threadpool.hpp \
     include/bitcoin/bitcoin/utility/timed_section.hpp \
     include/bitcoin/bitcoin/utility/weak_bind.hpp
-
-bitcoin_bitcoin_util_external_includedir = ${includedir}/bitcoin/bitcoin/utility/external
-bitcoin_bitcoin_util_external_include_HEADERS = \
-    include/bitcoin/bitcoin/utility/external/hmac_sha256.h \
-    include/bitcoin/bitcoin/utility/external/hmac_sha512.h \
-    include/bitcoin/bitcoin/utility/external/ripemd160.h \
-    include/bitcoin/bitcoin/utility/external/sha1.h \
-    include/bitcoin/bitcoin/utility/external/sha256.h \
-    include/bitcoin/bitcoin/utility/external/sha512.h \
-    include/bitcoin/bitcoin/utility/external/zeroize.h \
-    include/bitcoin/bitcoin/utility/external/uint256.h
 
 bitcoin_bitcoin_impl_utility_includedir = ${includedir}/bitcoin/bitcoin/impl/utility
 bitcoin_bitcoin_impl_utility_include_HEADERS = \
@@ -149,6 +152,18 @@ src_libbitcoin_la_SOURCES = \
     src/constants.cpp \
     src/error.cpp \
     src/format.cpp \
+    src/math/checksum.cpp \
+    src/math/ec_keys.cpp \
+    src/math/external/hmac_sha256.c \
+    src/math/external/hmac_sha512.c \
+    src/math/external/ripemd160.c \
+    src/math/external/sha1.c \
+    src/math/external/sha256.c \
+    src/math/external/sha512.c \
+    src/math/external/zeroize.c \
+    src/math/hash.cpp \
+    src/math/hash_number.cpp \
+    src/math/script_number.cpp \
     src/network/channel.cpp \
     src/network/handshake.cpp  \
     src/network/hosts.cpp \
@@ -159,21 +174,9 @@ src_libbitcoin_la_SOURCES = \
     src/stealth.cpp \
     src/transaction.cpp \
     src/utility/binary.cpp \
-    src/utility/checksum.cpp \
-    src/utility/ec_keys.cpp \
-    src/utility/hash.cpp \
-    src/utility/hash_number.cpp \
     src/utility/logger.cpp \
-    src/utility/script_number.cpp \
     src/utility/threadpool.cpp \
     src/utility/timed_section.cpp \
-    src/utility/external/hmac_sha256.c \
-    src/utility/external/hmac_sha512.c \
-    src/utility/external/ripemd160.c \
-    src/utility/external/sha1.c \
-    src/utility/external/sha256.c \
-    src/utility/external/sha512.c \
-    src/utility/external/zeroize.c \
     src/wallet/address.cpp \
     src/wallet/amount.cpp \
     src/wallet/base58.cpp \
