Generate installer options for travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,8 @@ before_install:
     - sudo apt-get -qq install g++-4.8
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50
     
-
 script:
 
     # Download and build libbitcoin and all dependencies.
-    - sudo ./install.sh CXXFLAGS="-Os -s" --disable-shared --enable-static --build-gmp --build-boost
+    - sudo ./install.sh CXXFLAGS='-Os -s' --disable-shared --enable-static --build-gmp --build-boost
 
